making this work on macos

--- a/.env
+++ b/.env
@@ -11,14 +11,14 @@ CUE=0.4.3
 DIFFT=0.28.0
 DOCTL=1.76.2
 EARTHLY=0.6.14
-FLYCTL=0.0.330
+FLYCTL=0.0.332
 GH=2.9.0
 HELM=3.9.0
 HLB=0.4.0
 HOF=0.6.2
 HUBBLE=0.9.0
 JLESS=0.8.0
-K3D=5.4.1
+K3D=5.4.3
 K3SUP=0.11.3
 K9S=0.25.18
 KREW=0.4.3
@@ -33,6 +33,7 @@ POWERLINE=1.21.0
 PYTHON=3.10.4
 SHELLCHECK=0.8.0
 SHFMT=3.5.0
+SKAFFOLD=1.37.2
 STEAMPIPE=0.14.6
 STEP=0.18.2
 TELEPORT=9.2.1
