--- a/fly/Dockerfile
+++ b/fly/Dockerfile
@@ -1,4 +1,6 @@
-FROM registry.fly.io/defn:dev-ci
+FROM registry.fly.io/defn:dev-tower
+
+USER root
 
 COPY service /service
 COPY buildkite-agent.cfg /etc/buildkite-agent/buildkite-agent.cfg
