--- a/Makefile.site
+++ b/Makefile.site
@@ -24,7 +24,7 @@ shell:
 	docker run --rm -ti --entrypoint bash defn:dev-tower
 
 up:
-	chmod 700 .gnupg .ssh
+	chmod 700 ~/.gnupg ~/.ssh
 	sudo chown ubuntu /var/run/docker.sock || true
 	if ! docker info; then (cd fly && $(MAKE) login); exec ~/bin/e tilt up --stream; else exec tail -f /dev/null; fi
 
