try injecting arch in image name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,5 @@
 {
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
+  "image": "defn/dev:${localEnv:arch}"
   "remoteUser": "ubuntu",
   "runArgs": [
     "-v",
