--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "image": "defn/dev:${localEnv:arch}"
+  "image": "defn/dev:${localEnv:arch}",
   "remoteUser": "ubuntu",
   "runArgs": [
     "-v",
