--- a/.devcontainer/devcontainer.yaml
+++ b/.devcontainer/devcontainer.yaml
@@ -30,3 +30,16 @@ spec:
         resources:
           requests:
             storage: 10Gi
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: dev
+subjects:
+  - kind: ServiceAccount
+    namespace: default
+    name: default
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
