--- a/devpod.yaml
+++ b/devpod.yaml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: dev
-          image: defn/dev:amd64
+          image: defn/dev
           imagePullPolicy: Always
           volumeMounts:
             - name: dev
