add argo, argocd cli

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
+ARGO=3.3.6
+ARGOCD=2.4.0
 ASDF=0.10.1
+AWSVAULT=6.6.0
 BOUNDARY=0.8.1
 BKCLI=1.2.0
 BUILDKITE=3.35.2
@@ -41,4 +44,3 @@ TERRAFORM=1.2.2
 TILT=0.30.2
 VAULT=1.10.3
 VCLUSTER=0.7.1
-AWSVAULT=6.6.0
