--- a/Makefile.site
+++ b/Makefile.site
@@ -28,6 +28,12 @@ shell:
 attach:
 	code --folder-uri vscode-remote://k8s-container+context=k3d-k3s-default+namespace=default+podname=dev-0+name=dev+/home/ubuntu
 
+kubeconfig:
+	kubectl config set-cluster pod --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt
+	kubectl config set-credentials pod --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
+	kubectl config set-context pod --cluster=pod --user=pod
+	kubectl config use-context pod
+
 up:
 	chmod 700 ~/.gnupg ~/.ssh
 	sudo chown ubuntu /var/run/docker.sock || true
