--- a/Makefile.site
+++ b/Makefile.site
@@ -35,13 +35,13 @@ kubeconfig:
 	kubectl config set-credentials pod --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
 	kubectl config set-context pod --cluster=pod --user=pod
 	kubectl config use-context pod
-
-argocd:
-	-kubectl create namespace argocd
 	kubectl config set-cluster argocd --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt
 	kubectl config set-credentials argocd --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
 	kubectl config set-context argocd --cluster=pod --user=argocd --namespace argocd
-	kubectl --context argocd apply -f https://raw.githubusercontent.com/argoproj/argo-cd/v2.4.0/manifests/install.yaml
+
+argocd:
+	-kubectl create namespace argocd
+	kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/v2.4.0/manifests/install.yaml
 
 up:
 	chmod 700 ~/.gnupg ~/.ssh
