--- a/Makefile.site
+++ b/Makefile.site
@@ -1,3 +1,11 @@
+init:
+	git clone git@github.com:jojomomojo/password-store work/password-store
+	git clone git@github.com:defn/dev work/dev
+	cd .password-store && git crypt unlock
+	$(MAKE) kubeconfig
+	pass hello
+	kubectl --context argocd get all
+
 dev:
 	@true
 
