--- a/Makefile.site
+++ b/Makefile.site
@@ -10,8 +10,7 @@ init:
 	-git clone git@github.com:defn/dev work/dev
 	$(MAKE) kubeconfig
 	pass hello
-	kubectl --context argocd get all
-
+	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl -n argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
