--- a/Makefile.site
+++ b/Makefile.site
@@ -11,7 +11,9 @@ init:
 	$(MAKE) kubeconfig
 	pass hello
 	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl -n argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
-	argocd cluster list
+	argocd app create argocd --repo https://github.com/defn/dev --path k/argocd --dest-namespace argocd --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
+	argocd app sync argocd --local k/argocd
+	argocd app list
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
