create registry outside of k3dcluster

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
       - id: check-json
         exclude: ^(provider|cdktf.out)/
       - id: check-yaml
+        args: [--allow-multiple-documents]
         exclude: ^(provider|cdktf.out)/
       - id: check-toml
         exclude: ^(provider|cdktf.out)/
