--- a/Makefile.site
+++ b/Makefile.site
@@ -28,7 +28,7 @@ prune:
 
 updates:
 	earthly --push +updates
-	docker tag defn/dev:latest_linux_arm64:latest localhost:5555/defn/dev:latest
+	docker tag defn/dev:latest_linux_arm64 localhost:5555/defn/dev:latest
 	docker push localhost:5555/defn/dev:latest
 
 shell:
