--- a/Makefile.site
+++ b/Makefile.site
@@ -13,6 +13,7 @@ init:
 	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl -n argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
 	argocd app create argocd --repo https://github.com/defn/dev --path k/argocd --dest-namespace argocd --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	argocd app create devpod --repo https://github.com/defn/dev --path k/devpod --dest-namespace default --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
+	argocd app create wip --repo https://github.com/defn/dev --path k/wip --dest-namespace default --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	tilt up --context pod
 
 asdf:
