make localhost available

--- a/k3d.yaml
+++ b/k3d.yaml
@@ -18,3 +18,20 @@ options:
   kubeconfig:
     updateDefaultKubeconfig: true
     switchCurrentContext: true
+registries:
+  create:
+    name: ignore
+  config: |
+    mirrors:
+      "k3d-registry:5555":
+        endpoint:
+          - http://k3d-registry:5000
+      "k3d-registry:5000":
+        endpoint:
+          - http://k3d-registry:5000
+      "localhost:5555":
+        endpoint:
+          - http://k3d-registry:5000
+      "localhost:5000":
+        endpoint:
+          - http://k3d-registry:5000
