--- a/Makefile.site
+++ b/Makefile.site
@@ -57,10 +57,11 @@ kubeconfig:
 	kubectl config set-cluster pod --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt
 	kubectl config set-credentials pod --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
 	kubectl config set-context pod --cluster=pod --user=pod
-	kubectl config use-context pod
+	skaffold config set --kube-context pod local-cluster true
 	kubectl config set-cluster argocd --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt
 	kubectl config set-credentials argocd --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
 	kubectl config set-context argocd --cluster=pod --user=argocd --namespace argocd
+	kubectl config use-context pod
 
 argocd: k/argocd/main.yaml
 	-kubectl create namespace argocd
