--- a/Makefile.site
+++ b/Makefile.site
@@ -42,7 +42,7 @@ attach:
 k3d:
 	-k3d cluster delete
 	-k3d registry create --port 0.0.0.0:5555
-	k3d cluster create --config k3d.yaml --k3s-node-label "pass=$$(cd ~/.password-store; git remote get-url origin | sed 's#@#\\@#')@server:0"
+	k3d cluster create --config k3d.yaml # --k3s-node-label "pass=$$(cd ~/.password-store; git remote get-url origin | sed 's#@#\\@#')@server:0"
 	docker pull defn/dev
 	docker tag defn/dev:latest localhost:5555/defn/dev:latest
 	docker push localhost:5555/defn/dev:latest
