--- a/Makefile.site
+++ b/Makefile.site
@@ -33,6 +33,11 @@ updates:
 	docker tag defn/dev:latest localhost:5555/defn/dev:latest
 	docker push localhost:5555/defn/dev:latest
 
+amd64-update:
+	earthly --push +amd64-update
+	docker tag defn/dev:latest localhost:5555/defn/dev:latest
+	docker push localhost:5555/defn/dev:latest
+
 shell:
 	docker run --rm -ti defn/dev bash -l
 
