rewrite the local registry hosting cm

--- a/k/dev/main.yaml
+++ b/k/dev/main.yaml
@@ -45,3 +45,14 @@ roleRef:
   kind: ClusterRole
   name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: local-registry-hosting
+  namespace: kube-public
+data:
+  localRegistryHosting.v1: |
+    host: localhost:5555
+    hostFromClusterNetwork: k3d-registry:5000
+    hostFromContainerRuntime: k3d-registry:5000
