--- a/Makefile.site
+++ b/Makefile.site
@@ -90,12 +90,12 @@ live:
 	@env SSH_AUTH_SOCK="$(shell ls -td /tmp/vscode-ssh-auth-* 2>/dev/null | head -1)" ssh-add -L 2>/dev/null >/dev/null
 
 monitor:
-	@set -x; rm -f ~/.dead; \
+	@rm -f ~/.dead; \
 		if ! $(MAKE) live 2>/dev/null >/dev/null; then \
 			touch ~/.dead; \
-			for a in $$(seq 1 50); do \
+			for a in $$(seq 1 60); do \
 				if $(MAKE) live 2>/dev/null >/dev/null; then rm -f ~/.dead; break; fi; \
-				echo MAYBE DEAD $$a; sleep 10; done; \
+				echo MAYBE DEAD $$a; sleep 5; done; \
 		fi; \
 		if test -f ~/.dead; then \
 			~/bin/e $(MAKE) down; \
