--- a/Makefile.site
+++ b/Makefile.site
@@ -47,10 +47,41 @@ attach:
 k3d:
 	-k3d cluster delete
 	-k3d registry create --port 0.0.0.0:5555
-	k3d cluster create --config k3d.yaml # --k3s-node-label "pass=$$(cd ~/.password-store; git remote get-url origin | sed 's#@#\\@#')@server:0"
+	k3d cluster create --config k3d.yaml \
+		--no-lb \
+		--k3s-arg "--disable=servicelb" \
+		--k3s-arg "--disable=traefik" \
+		--k3s-arg "--disable-network-policy" \
+		--k3s-arg "--flannel-backend=none"
+	curl -sSL -o bash https://github.com/robxu9/bash-static/releases/download/5.1.016-1.2.3/bash-linux-x86_64
+	chmod 755 bash
+	docker cp bash k3d-k3s-default-server-0:/bin/bash
+	rm -f bash
+	helm repo add cilium https://helm.cilium.io/
+	helm repo update
+	helm install cilium cilium/cilium --version 1.11.5 \
+		--namespace kube-system \
+		--set kubeProxyReplacement=partial \
+		--set hostServices.enabled=false \
+		--set externalIPs.enabled=true \
+		--set nodePort.enabled=true \
+		--set hostPort.enabled=true \
+		--set bpf.masquerade=false \
+		--set image.pullPolicy=IfNotPresent \
+		--set ipam.mode=kubernetes \
+		--set operator.replicas=1 \
+		--set hubble.relay.enabled=true \
+		--set hubble.ui.enabled=true
+	docker exec k3d-k3s-default-server-0 mount bpffs /sys/fs/bpf -t bpf
+	while true; do if docker exec k3d-k3s-default-server-0 mount --make-shared /sys/fs/bpf; then break; fi; sleep 1; done
+	while true; do if docker exec k3d-k3s-default-server-0 mount --make-shared /run/cilium/cgroupv2; then break; fi; sleep 1; done
 	docker pull defn/dev
 	docker tag defn/dev:latest localhost:5555/defn/dev:latest
 	docker push localhost:5555/defn/dev:latest
+	kubectl -n kube-system rollout status deployment cilium-operator --watch
+	kubectl -n kube-system rollout status deployment hubble-relay --watch
+	kubectl -n kube-system rollout status deployment hubble-ui --watch
+	kubectl -n kube-system rollout status daemonset cilium --watch
 	kubectl apply -f k/dev/main.yaml
 	$(MAKE) argocd
 	kubectl rollout status statefulset dev --watch
