--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ BKCLI=1.2.0
 BUILDKITE=3.35.2
 CDKTF=0.11.1
 CILIUM=0.11.1
-CLOUDFLARED=2022.5.3
-CONSUL=1.12.1
+CLOUDFLARED=2022.6.1
+CONSUL=1.12.2
 CREDENTIAL_PASS=0.6.4
 CUE=0.4.3
 DIFFT=0.28.0
@@ -35,12 +35,12 @@ NPM=8.12.1
 POWERLINE=1.21.0
 PYTHON=3.10.4
 SHELLCHECK=0.8.0
-SHFMT=3.5.0
-SKAFFOLD=1.37.2
+SHFMT=3.5.1
+SKAFFOLD=1.38.0
 STEAMPIPE=0.14.6
 STEP=0.20.0
 TELEPORT=9.2.1
-TERRAFORM=1.2.2
-TILT=0.30.2
-VAULT=1.10.3
+TERRAFORM=1.2.3
+TILT=0.30.3
+VAULT=1.11.0-rc1
 VCLUSTER=0.7.1
