create the registry in the k3d network

--- a/Makefile.site
+++ b/Makefile.site
@@ -46,7 +46,7 @@ attach:
 	code --folder-uri vscode-remote://k8s-container+context=k3d-k3s-default+namespace=default+podname=dev-0+name=dev+/home/ubuntu
 
 registry:
-	-k3d registry create --port 0.0.0.0:5555
+	-k3d registry create --default-network k3d-k3s-default --port 0.0.0.0:5555
 	docker pull defn/dev
 	docker tag defn/dev localhost:5555/defn/dev
 	docker push localhost:5555/defn/dev
