--- a/Makefile.site
+++ b/Makefile.site
@@ -12,6 +12,8 @@ init:
 	$(MAKE) kubeconfig
 	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl -n argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
 	argocd app create argocd --repo https://github.com/defn/dev --path k/argocd --dest-namespace argocd --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
+	argocd app create traefik --repo https://github.com/defn/dev --path k/traefik --dest-namespace traefik --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
+	argocd app create kuma --repo https://github.com/defn/dev --path k/kuma --dest-namespace kuma-system --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	argocd app create dev --repo https://github.com/defn/dev --path k/dev --dest-namespace default --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	argocd app create wip --repo https://github.com/defn/dev --path k/wip --dest-namespace default --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	tilt up --context pod
