--- a/k3d.yaml
+++ b/k3d.yaml
@@ -29,3 +29,6 @@ registries:
       "localhost:5000":
         endpoint:
           - http://k3d-registry:5000
+      "docker.io":
+        endpoint:
+          - http://k3d-docker-io:5001
