--- a/k/vc/main.yaml
+++ b/k/vc/main.yaml
@@ -1,60 +1,24 @@
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: vc
-spec:
-  selector:
-    matchLabels:
-      app: dev
-  serviceName: dev
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: dev
-    spec:
-      terminationGracePeriodSeconds: 10
-      containers:
-        - name: dev
-          image: k3d-registry:5000/defn/dev:latest
-          imagePullPolicy: Always
-          command: ["/usr/bin/tini", "--"]
-          args: ["make", "monitor-loop"]
-          volumeMounts:
-            - name: docker-sock
-              mountPath: /var/run/docker.sock
-            - name: work
-              mountPath: /home/ubuntu/work
-        - name: redis
-          image: redis:7.0.2
-      volumes:
-        - name: docker-sock
-          hostPath:
-            path: /var/run/docker.sock
-        - name: work
-          hostPath:
-            path: /mnt/work
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: dev
-subjects:
-  - kind: ServiceAccount
-    namespace: default
-    name: default
-roleRef:
-  kind: ClusterRole
-  name: cluster-admin
-  apiGroup: rbac.authorization.k8s.io
----
+kind: Namespace
 apiVersion: v1
-kind: ConfigMap
 metadata:
-  name: local-registry-hosting
-  namespace: kube-public
-data:
-  localRegistryHosting.v1: |
-    host: localhost:5000
-    hostFromClusterNetwork: k3d-registry:5000
-    hostFromContainerRuntime: k3d-registry:5000
+  name: vc1
+---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: vc2
+---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: vc3
+---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: vc4
+---
+kind: Namespace
+apiVersion: v1
+metadata:
+  name: vc5
