--- a/k/vc1/main.yaml
+++ b/k/vc1/main.yaml
@@ -19,14 +19,12 @@ spec:
           image: k3d-registry:5000/defn/dev:latest
           imagePullPolicy: Always
           command: ["/usr/bin/tini", "--"]
-          args: ["make", "monitor-loop"]
+          args: ["tail", "-f", "/dev/null"]
           volumeMounts:
             - name: docker-sock
               mountPath: /var/run/docker.sock
             - name: work
               mountPath: /home/ubuntu/work
-        - name: redis
-          image: redis:7.0.2
       volumes:
         - name: docker-sock
           hostPath:
@@ -47,14 +45,3 @@ roleRef:
   kind: ClusterRole
   name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: local-registry-hosting
-  namespace: kube-public
-data:
-  localRegistryHosting.v1: |
-    host: localhost:5000
-    hostFromClusterNetwork: k3d-registry:5000
-    hostFromContainerRuntime: k3d-registry:5000
