shell operator runs as root

--- a/k/vc1/main.yaml
+++ b/k/vc1/main.yaml
@@ -30,6 +30,9 @@ spec:
           imagePullPolicy: Always
           command: ["/usr/bin/tini", "--"]
           args: ["/shell-operator"]
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsUser: 0
       volumes:
         - name: docker-sock
           hostPath:
