--- a/k/vc1/main.yaml
+++ b/k/vc1/main.yaml
@@ -29,7 +29,8 @@ spec:
           image: k3d-registry:5000/defn/dev:latest
           imagePullPolicy: Always
           command: ["/usr/bin/tini", "--"]
-          args: ["/shell-operator"]
+          args: ["/start.sh", "/shell-operator"]
+          workingDir: /
           securityContext:
             allowPrivilegeEscalation: false
             runAsUser: 0
